# freeRTOS-visualizer

./: CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: build-publish.yml  ci.yml  codeql.yml  firmware.yml  scorecard.yml  security.yml
docs/: ENGINEERING_JOURNAL.md  paper.bib  paper.md
examples/: README.md  plot_timeline.py  print_stats.py  record_demo.py  run_demo.py  security_demo.py
firmware/: README.md  trace_shim.c  trace_shim.h
firmware/qemu-demo/: .gitignore  FreeRTOSConfig.h  Makefile  README.md  main.c  mps2_m3.ld  startup.c  uart.c  verify_qemu.py
freertos_visualizer/: __init__.py  __main__.py  reader.py  render.py  security.py  simulator.py  stats.py  timeline.py  visualize.py
tests/: test_backpressure.py  test_integration_loopback.py  test_integration_pipeline.py  test_integration_socket_loopback.py  test_reader.py  test_render.py  test_security.py  test_serial.py  test_simulator.py  test_stats.py  test_tick_semantics.py  test_timeline.py  test_timestamps.py
