[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freertos-visualizer"
version = "0.1.5"
description = "A Python tool for real-time FreeRTOS task state visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Hariharan Ragothaman", email = "hariharanragothaman@gmail.com" },
]
keywords = ["FreeRTOS", "visualizer", "real-time", "Python", "embedded", "RTOS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Embedded Systems",
]

# Core runtime dependency only. The GUI deps live in the optional `gui` extra so
# headless consumers (CI, the core library, the simulator) install nothing heavy.
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15",
    "matplotlib>=3.4",
    "pillow>=9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.4",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/hariharanragothaman/freeRTOS-visualizer"
Repository = "https://github.com/hariharanragothaman/freeRTOS-visualizer"
Issues = "https://github.com/hariharanragothaman/freeRTOS-visualizer/issues"

[project.scripts]
rtos-visualize = "freertos_visualizer.visualize:main"

[tool.setuptools.packages.find]
include = ["freertos_visualizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["freertos_visualizer"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
